metrique/tests/ui/fail/bad_flags.stderr
error: conflicting `flags`: `MyTag` is both present and skipped
  --> tests/ui/fail/bad_flags.rs:11:28
   |
11 |     #[metrics(flags(MyTag, skip(MyTag)))]
   |                            ^^^^

error: skip(...) is not allowed in default_flags. To exclude a flag from a specific field, use flags(skip(T)) on that field.
  --> tests/ui/fail/bad_flags.rs:16:25
   |
16 | #[metrics(default_flags(skip(MyTag)))]
   |                         ^^^^

error: flags(...) cannot be used on flatten or flatten_entry fields. Apply flags on the child struct directly with default_flags(...).
  --> tests/ui/fail/bad_flags.rs:29:15
   |
29 |     #[metrics(flatten, flags(MyTag))]
   |               ^^^^^^^

error: cfg attributes on fields inside enum variants are not supported. Use a cfg-gated variant or an Option field instead.
  --> tests/ui/fail/bad_flags.rs:40:9
   |
40 |         field: u64,
   |         ^^^^^

error: cfg attributes on fields inside enum variants are not supported. Use a cfg-gated variant or an Option field instead.
  --> tests/ui/fail/bad_flags.rs:53:9
   |
53 |         #[cfg(test)]
   |         ^
